# codyssey

./: .gitignore  .python-version  1-1-1.ipynb  1-1-2.md  1-1-3.md  1-1-4.md  README.md  learn_pandas.py  pyproject.toml
.github/: copilot-instructions.md  labels.json
prob-0101/: 1.ipynb  2.ipynb  3.ipynb  4.ipynb
prob-0102/: 1.ipynb  2.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb  7.ipynb  data.py
prob-0102/data/: download_data
prob-0103/: 1.ipynb  2.ipynb  3.ipynb
